[package]
name = "address_bert"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
candle-core = "0.8.0"
candle-datasets = "0.8.0"
candle-flash-attn = "0.8.0"
candle-nn = "0.8.0"
candle-onnx = "0.8.0"
candle-transformers = "0.8.0"
env_logger = "0.11.5"
hf-hub = "0.3.2"
log = "0.4.22"
