[package]
name = "address_bert"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4.9.0", features = ["rustls"]}
anyhow = "1.0.95"
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-transformers = "0.8.1"
env_logger = "0.11.6"
hf-hub = "0.4.1"
log = "0.4.22"
serde_json = "1.0.134"
tokenizers = "0.21.0"
