[package]
name = "address_bert"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4.9.0", features = ["rustls"]}
anyhow = "1.0.95"
env_logger = "0.11.6"
glowrs = "0.4.1"
hf-hub = "0.4.1"
kalosm-language-model = "0.3.3"
log = "0.4.22"
qdrant-client = "1.12.1"
rbert = "0.3.3"
serde_json = "1.0.134"
tokenizers = "0.21.0"
tokio = "1.42.0"
